<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_painel" tools:context=".PainelActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@mipmap/viacep_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/viacep_cabecalho" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:gravity="top|center_horizontal"
        android:baselineAligned="false"
        android:focusable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtCEP"
                android:layout_marginTop="30dp"
                android:hint="@string/txtCEP"
                android:gravity="center"
                android:maxLength="9"
                android:inputType="number|text"
                android:layout_gravity="top" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/btnBuscar"
                android:id="@+id/btnBuscar"
                android:background="@drawable/botao_verde"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:gravity="center" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLogradouro"
            android:hint="@string/txtLogradouro"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtComplemento"
            android:hint="@string/txtComplemento"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtBairro"
            android:gravity="center"
            android:hint="@string/txtBairro" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLocalidade"
            android:hint="@string/txtLocalidade"
            android:gravity="center"
            android:layout_gravity="left" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtUf"
            android:gravity="center"
            android:hint="@string/txtUf" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtIbge"
            android:gravity="center"
            android:hint="@string/txtIbge" />

        <EditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtGia"
            android:gravity="center"
            android:hint="@string/txtGia" />

    </LinearLayout>

</RelativeLayout>
